tests/compile_fail/resolver_unresolvable.stderr
error: Unresolvable definition "meters".
  --> tests/compile_fail/resolver_unresolvable.rs:13:15
   |
13 |         unit (meters, "m") = 0.001 * kilometers,
   |               ^^^^^^
   |
   = help: Remove recursive definitions.

error: Unresolvable definition "kilometers".
  --> tests/compile_fail/resolver_unresolvable.rs:14:15
   |
14 |         unit (kilometers, "km") = 1000.0 * meters,
   |               ^^^^^^^^^^
   |
   = help: Remove recursive definitions.
